# currency-converter-api

./: .env.example  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml
docs/: API_TEST_REPORT.md  CHANGELOG.md  DOCUMENTATION_UPDATE_SUMMARY.md  FINAL_UPDATE_REPORT.md  OPTIMIZATION_REPORT.md  PROJECT_SUMMARY.md  QUICK_START.md  RUN_WITHOUT_DOCKER.md  STATUS_FIELD_UPDATE.md  UPDATE_SUMMARY.md
src/: config.rs  error.rs  main.rs  routes.rs
src/handlers/: convert.rs  health.rs  mod.rs  rates.rs
src/models/: api.rs  mod.rs  rate.rs
src/services/: converter.rs  ecb_fetcher.rs  mod.rs  redis_store.rs  scheduler.rs
